30221727: added javadoc comments